Only adjust composited pagination position to account for lines offset of inlines.

BUG=719561
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2883083004
Cr-Commit-Position: refs/heads/master@{#473092}

Former-commit-id: f4166640f3a4119cdb4b33e2f16ebdd28ef6ff7f